--- a/.gitignore
+++ b/.gitignore
@@ -29,6 +29,10 @@
 .pub/
 /build/
 
+# Flutter related
+.flutter-plugins-dependencies
+.metadata
+
 # Android related
 **/android/**/gradle-wrapper.jar
 **/android/.gradle
